[Fix] added some padding and gap in the Login and Register form to improve the UI

--- a/app/auth/Auth.module.css
+++ b/app/auth/Auth.module.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     width: 350px;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .form input{
@@ -44,7 +44,8 @@
 }
 
 .submit{
-    width: 5rem;
+    width: 7rem;
+    padding: .5rem 0;
     border-radius: 5px;
 }
 
@@ -56,13 +57,13 @@
 /* small screen */
 @media screen and (max-width: 768px) {
     .form_wrapper{
-        margin-top: 1rem;
+        margin-top: 2rem;
         margin-inline: 1rem;
     }
 
     .form{
         width: 100%;
-        padding: .2rem;
+        padding: 1rem .2rem;
     }
 
     .form h1{
